pkgs/typed-racket-pkgs/typed-racket-test/tests/typed-racket/fail/internal-ann.rkt

#lang typed/scheme/base

(define (f x)
 (: g (Integer -> Integer))
 (define (g x)
   (+ x 2))
 (g x))
